# nitomoe

./: .gitignore  Cargo.toml  build.rs  diesel.toml  docker-compose.yml
assets/scss/: _mobile.scss  admin.scss  auth.scss
migrations/2025-01-04-223714_create_boards/: up.sql
migrations/2025-01-05-043639_create_users/: up.sql
src/: args.rs  env.rs  macros.rs  main.rs  schema.rs
src/config/: database.rs
src/models/: board.rs  user.rs
src/repos/: board_repo.rs  mod.rs
src/views/: admin_view.rs  mod.rs
templates/admin/: auth.html  dashboard.html
