[package]
name = "nitomoe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
rpassword = "7.3.1"

[build-dependencies]
grass = "0.13.4"
walkdir = "2.5.0"
